<resources>
    <string name="app_name">Week2Task1rayana</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="mobile">Mobile</string>
    <string name="toa">Toa</string>
    <string name="tv">Tv</string>
    <string name="go">Go</string>
</resources>